samples/_failures_safe/1761246095_920f05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7b96458.c: In function ‘main’:
./samples/SAFE/__tmp_a7b96458.c:120:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  120 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_a7b96458.c:120:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a7b96458.c:120:10: error: expected ‘;’ at end of input
  120 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_a7b96458.c:120:5: error: expected declaration or statement at end of input
  120 |     print
      |     ^~~~~
